--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
+    "@parcel/optimizer-image": "^2.13.3",
     "@reduxjs/toolkit": "^2.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
