--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,7 @@
   "rewrites": [
     {
       "source": "/api/restaurants/list",
-      "destination": "https://www.swiggy.com/dapi/restaurants/list/v5"
-    },
-    {
-      "source": "/api/menu",
-      "destination": "https://www.swiggy.com/dapi/menu/pl?page-type=REGULAR_MENU&complete-menu=true&lat=12.9715987&lng=77.5945627&restaurantId="
-    },
-    {
-      "source": "/api/logo",
-      "destination": "https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_660,c_fill/"
+      "destination": "https://www.swiggy.com/dapi/restaurants/list/v5?lat=12.9715987&lng=77.5945627&is-seo-homepage-enabled=true&page_type=DESKTOP_WEB_LISTING"
     }
   ]
 }
