--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "destination": "https://www.swiggy.com/dapi/restaurants/list/v5?lat=12.9715987&lng=77.5945627&is-seo-homepage-enabled=true&page_type=DESKTOP_WEB_LISTING"
     },
     {
-      "source": "/api/menu",
+      "source": "/api/menu?restaurantId=",
       "destination": "https://www.swiggy.com/dapi/menu/pl?page-type=REGULAR_MENU&complete-menu=true&lat=12.9715987&lng=77.5945627&restaurantId="
     },
     {
