--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,11 @@
       "destination": "https://www.swiggy.com/dapi/restaurants/list/v5?lat=12.9715987&lng=77.5945627&is-seo-homepage-enabled=true&page_type=DESKTOP_WEB_LISTING"
     },
     {
-      "source": "/api/menu=",
-      "destination": "https://www.swiggy.com/dapi/menu/pl?page-type=REGULAR_MENU&complete-menu=true&lat=12.9715987&lng=77.5945627&restaurantId="
+      "source": "/api/menu&restaurantId=",
+      "destination": "https://www.swiggy.com/dapi/menu/pl?page-type=REGULAR_MENU&complete-menu=true&lat=12.9715987&lng=77.5945627"
     },
     {
-      "source": "/api/logo",
+      "source": "/api/logo/",
       "destination": "https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_660,c_fill/"
     }
   ]
