url image updates

--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,10 @@
     {
       "source": "/api/menu&restaurantId=",
       "destination": "https://www.swiggy.com/dapi/menu/pl?page-type=REGULAR_MENU&complete-menu=true&lat=12.9715987&lng=77.5945627"
-    },
-    {
-      "source": "/api/logo/",
-      "destination": "https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_660,c_fill/"
     }
+    // {
+    //   "source": "/api/logo/",
+    //   "destination": "https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_660,c_fill/"
+    // }
   ]
 }
