--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@parcel/optimizer-image": "^2.13.3",
     "@reduxjs/toolkit": "^2.5.0",
+    "fa": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
